--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Abhishek Shandilya
-email: abhishek.sandy@gmail.com
+title: Vishal Subramanian
+email: vishalsubbu97@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Website of Abhishek Shandilya
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://abhishandy.github.io" # the base hostname & protocol for your site
-github_username:  abhishandy
-twitter_username: abhishandy
-facebook_username:  abhishek.sandy
-instagram_username:  abhishandy
+url: "http://vishal-subbu.github.io" # the base hostname & protocol for your site
+github_username:  vishal-subbu
+facebook_username:  Vishal Subramanian
 
 # Build settings
 markdown: kramdown
