--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Vishal Subramanian
 email: vishalsubbu97@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Website of Abhishek Shandilya
+  Website of Vishal Subramanian
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://vishal-subbu.github.io" # the base hostname & protocol for your site
 github_username:  vishal-subbu
